--- a/index.html
+++ b/index.html
@@ -270,10 +270,8 @@
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 				<div class="popup"><div class="popup_text">Готовая тумба и техническое задание по эскизам Натальи Поповой</div></div>
 				<div class="description">
-					<div style="background-color: black;" class="library_description">
-						<div class="library_description_content">
-							<img src="images/27.2.jpg" alt="" class="library_plan">
-						</div>
+					<div class="library_description">
+						<img src="images/27.2.jpg" alt="" class="library_description_image">
 					</div>
 				</div>
 			</div>
@@ -296,7 +294,7 @@
 				<div class="popup"><div class="popup_text">Библиотечно-информационный центр им. Островского Н.А. в г. Ростове-на-Дону</div></div>
 				<div class="description">
 					<div class="library_description">
-						<div class="library_description_content">
+						<div class="library_description_text">
 							<br>
 							Интерьер абонемента Библиотечно-информационного центра имени Н.А.Островского в г. Ростове-на-Дону <br>
 							<br>
@@ -308,7 +306,9 @@
 							<br>
 							Проектируемые помещения имеют ассиметричную форму. В помещениях была выполнена перепланировка для разделения пространства на зоны. Имеются внутренние перегородки, колонны и выступы несущих колонн.
 							<br>
-							<img src="images/8_4.jpg" alt="" class="library_plan"> <br>
+						</div>
+						<img src="images/8_4.jpg" alt="" class="library_description_image"> <br>
+						<div class="library_description_text">
 							Освещение естественное и искусственное. <br>
 							Площадь помещения: <br>
 							– абонемент 37,93 м2; <br>
@@ -317,9 +317,10 @@
 							Подвесной потолок выполнен из деревянных панелей на металлических креплениях. <br>
 							Полы выполнены в одном уровне. <br>
 							Вход в читальный зал осуществляется через абонемент. В основу проектирования заложена функциональная схема зонирования пространств. Всё пространство делится на следующие зоны: входная зона, абонемент, читальная зона, компьютерная зона, гардеробная зона.
+
 						</div>
 					</div>
-					<img src="images/8_5.jpg" alt="" class="library_plan">
+					<img src="images/8_5.jpg" alt="" class="library_description_image">
 					<div class="offset"></div>
 				</div>
 			</div>
@@ -341,6 +342,13 @@
 				<img class="grid_image" src="images/18.jpg" alt="">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 				<div class="popup"><div class="popup_text">Интерьер спальни с тропической ноткой</div></div>
+				<div class="description"></div>
+			</div>
+			<div class="grid_item">
+				<img class="grid_image" src="images/4.1with.jpg" alt="">
+				<img src="images/interactive.svg" alt="" class="interactive">
+				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+				<div class="popup"><div class="popup_text">Игра искуственного и дневного света в экстерьере</div></div>
 				<div class="description"></div>
 			</div>
 		</div>
@@ -365,18 +373,22 @@
 				<div class="description"></div>
 			</div>
 			<div class="grid_item">
+				<img class="grid_image" src="images/30.jpg" alt="">
+				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+				<div class="popup"><div class="popup_text">Абстракция маслом, 1000 х 900</div></div>
+				<div class="description"></div>
+			</div>
+			<div class="grid_item">
 				<img class="grid_image" src="images/19.3.jpg" alt="">
 				<img src="images/interactive.svg" alt="" class="interactive">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 				<div class="popup"><div class="popup_text">3D-визуализации кухни-гостиной по проекту Натальи Поповой</div></div>
 				<div class="description">
-					<div style="background-color: black;" class="library_description">
-						<div class="library_description_content">
-							<img src="images/19.1.jpg" alt="" class="library_plan"> <br>
-							<img src="images/19.2.jpg" alt="" class="library_plan"> <br>
-							<img src="images/19.4.jpg" alt="" class="library_plan"> <br>
-							<img src="images/19.5.jpg" alt="" class="library_plan"> <br>
-						</div>
+					<div class="library_description">
+						<img src="images/19.1.jpg" alt="" class="library_description_image">
+						<img src="images/19.2.jpg" alt="" class="library_description_image">
+						<img src="images/19.4.jpg" alt="" class="library_description_image">
+						<img src="images/19.5.jpg" alt="" class="library_description_image">
 					</div>
 				</div>
 			</div>
@@ -391,13 +403,6 @@
 				<img src="images/interactive.svg" alt="" class="interactive">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 				<div class="popup"><div class="popup_text">Интерьер спальни с выходом на балкон</div></div>
-				<div class="description"></div>
-			</div>
-			<div class="grid_item">
-				<img class="grid_image" src="images/4.1with.jpg" alt="">
-				<img src="images/interactive.svg" alt="" class="interactive">
-				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-				<div class="popup"><div class="popup_text">Игра искуственного и дневного света в экстерьере</div></div>
 				<div class="description"></div>
 			</div>
 			<div class="grid_item">
@@ -433,13 +438,11 @@
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 				<div class="popup"><div class="popup_text">Выполнение рабочей документации по проекту Натальи Поповой, КП "Зеленое подворье"</div></div>
 				<div class="description">
-					<div style="background-color: black;" class="library_description">
-						<div class="library_description_content">
-							<img src="images/28.2.jpg" alt="" class="library_plan"> <br>
-							<img src="images/28.3.jpg" alt="" class="library_plan"> <br>
-							<img src="images/28.4.jpg" alt="" class="library_plan"> <br>
-							<img src="images/28.5.jpg" alt="" class="library_plan"> <br>
-						</div>
+					<div class="library_description">
+						<img src="images/28.2.jpg" alt="" class="library_description_image">
+						<img src="images/28.3.jpg" alt="" class="library_description_image">
+						<img src="images/28.4.jpg" alt="" class="library_description_image">
+						<img src="images/28.5.jpg" alt="" class="library_description_image">
 					</div>
 				</div>
 			</div>
