--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 			<h3>Образование</h3>
 			<div class="education">
 				<span style="color: white">Основное</span> <br> <br>
-				Ростовский-на-Дону строительный колледж. Архитектура (очно)<br> <br>
-				Донской государственный технический университет. Промышленное и гражданское строительство (заочно)<br> <br>
+				Ростовский-на-Дону строительный колледж. Архитектура<br> <br>
+				Донской государственный технический университет. Промышленное и гражданское строительство<br> <br>
 				<span style="color: white">Дополнительное</span> <br> <br>
 				ARHI.TECH - официальный тренинг-центр Autodesk и учебный центр GRAPHISOFT <br> <br>
 				Школа 3D-визуализации Ильи Изотова
@@ -255,20 +255,20 @@
 			<div class="grid_item">
 				<img class="grid_image" src="images/20.jpg" alt="">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-				<div class="popup"><div class="popup_text">3D-визуализация детской по проекту Натальи Поповой</div></div>
+				<div class="popup"><div class="popup_text">3D-визуализация детской</div></div>
 				<div class="description"></div>
 			</div>
 			<div class="grid_item">
 				<img class="grid_image" src="images/24.jpg" alt="">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-				<div class="popup"><div class="popup_text">Коллаж гостевого санузла</div></div>
+				<div class="popup"><div class="popup_text">Визуализация и коллаж гостевого санузла</div></div>
 				<div class="description"></div>
 			</div>
 			<div class="grid_item">
 				<img class="grid_image" src="images/27.1.jpg" alt="">
 				<img src="images/interactive.svg" alt="" class="interactive">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-				<div class="popup"><div class="popup_text">Готовая тумба и техническое задание по эскизам Натальи Поповой</div></div>
+				<div class="popup"><div class="popup_text">Готовая тумба и техническое задание</div></div>
 				<div class="description">
 					<div class="library_description">
 						<img src="images/27.2.jpg" alt="" class="library_description_image">
@@ -382,7 +382,7 @@
 				<img class="grid_image" src="images/19.3.jpg" alt="">
 				<img src="images/interactive.svg" alt="" class="interactive">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-				<div class="popup"><div class="popup_text">3D-визуализации кухни-гостиной по проекту Натальи Поповой</div></div>
+				<div class="popup"><div class="popup_text">3D-визуализации кухни-гостиной</div></div>
 				<div class="description">
 					<div class="library_description">
 						<img src="images/19.1.jpg" alt="" class="library_description_image">
@@ -423,20 +423,20 @@
 			<div class="grid_item">
 				<img class="grid_image" src="images/21.jpg" alt="">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-				<div class="popup"><div class="popup_text">3D-визуализация спальни по проекту Натальи Поповой, КП "Зеленое подворье"</div></div>
+				<div class="popup"><div class="popup_text">3D-визуализация спальни, КП "Зеленое подворье"</div></div>
 				<div class="description"></div>
 			</div>
 			<div class="grid_item">
 				<img class="grid_image" src="images/23.jpg" alt="">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-				<div class="popup"><div class="popup_text">Коллаж зоны столовой</div></div>
+				<div class="popup"><div class="popup_text">Визуализация и коллаж зоны столовой</div></div>
 				<div class="description"></div>
 			</div>
 			<div class="grid_item">
 				<img class="grid_image" src="images/28.1.jpg" alt="">
 				<img src="images/interactive.svg" alt="" class="interactive">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-				<div class="popup"><div class="popup_text">Выполнение рабочей документации по проекту Натальи Поповой, КП "Зеленое подворье"</div></div>
+				<div class="popup"><div class="popup_text">Выполнение рабочей документации, КП "Зеленое подворье"</div></div>
 				<div class="description">
 					<div class="library_description">
 						<img src="images/28.2.jpg" alt="" class="library_description_image">
